05_Argo_Rollouts_Istio/rollout_canary/api-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-vs
  namespace: api
spec:
  gateways:
  - api-gw
  hosts:
  - api.192.168.39.155.nip.io
  http:
  - name: api-svc
    route:
    - destination:
        host: api-svc.api.svc.cluster.local
        port:
          number: 3000
      weight: 100
    - destination:
        host: canary-api-svc.api.svc.cluster.local
        port:
          number: 3000
      weight: 0
